--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^6.4",
         "squizlabs/php_codesniffer": "^3.1",
-        "satooshi/php-coveralls": "^1.0",
-        "psy/psysh": "^0.8.14"
+        "psy/psysh": "^0.8.14",
+        "php-coveralls/php-coveralls": "^2.1"
     },
     "license": "MIT",
     "authors": [
