--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-    - 7.0
     - 7.1
     - 7.2
 
@@ -12,4 +11,4 @@ before_script:
 script: vendor/bin/phpunit
 
 after_success:
-    - travis_retry php vendor/bin/coveralls
+    - travis_retry php vendor/bin/php-coveralls
